--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@vue/cli": "^3.11.0",
     "axios": "^0.19.0",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^2.6.5",
+    "express": "^4.17.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1",
