--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-vue": "^2.0.4",
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^2.6.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
