--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
+    "vue-pwa-asset-generator": "^0.4.3",
     "vue-router": "^3.1.6",
     "vuex": "^3.2.0",
     "vuex-persist": "^2.2.0"
