--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^2.6.11",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "moment": "^2.27.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
     "vue-pwa-asset-generator": "^0.4.3",
@@ -29,7 +30,7 @@
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@vue/cli-plugin-babel": "^3.12.1",
     "@vue/cli-plugin-eslint": "^3.12.1",
-    "@vue/cli-plugin-pwa": "^4.1.2",
+    "@vue/cli-plugin-pwa": "^4.4.6",
     "@vue/cli-service": "^3.12.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
