--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
+    "sw-precache-webpack-plugin": "^1.0.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
