--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^2.6.11",
     "vue-pwa-asset-generator": "^0.4.3",
     "vue-router": "^3.1.6",
+    "vue-select": "^3.10.7",
     "vuex": "^3.2.0",
     "vuex-persist": "^2.2.0"
   },
